--- a/contact.html
+++ b/contact.html
@@ -101,13 +101,11 @@
 		<iframe width="498" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=america&amp;aq=&amp;sll=14.440706,80.001154&amp;sspn=0.039274,0.075188&amp;ie=UTF8&amp;hq=&amp;hnear=United+States&amp;ll=37.09024,-95.712891&amp;spn=32.912722,76.992187&amp;t=m&amp;z=5&amp;output=embed"></iframe><br /><small><a href="https://maps.google.co.in/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=america&amp;aq=&amp;sll=14.440706,80.001154&amp;sspn=0.039274,0.075188&amp;ie=UTF8&amp;hq=&amp;hnear=United+States&amp;ll=37.09024,-95.712891&amp;spn=32.912722,76.992187&amp;t=m&amp;z=5" style="color:#999;text-align:left">View Larger Map</a></small>
 	</div>	
 	<div class="grids">
-	<h4>The Company Name</h4>
-	<span>marmora road</span><br>
-	<span>glasgow,do4 89gr</span><br>
-	<span>Freephone: +1 800 559 6580</span>?<br>
-	<span>Telephone: +1 959 603 6035</span> <br>
-	<span>FAX: +1 800 889 9898</span><br>
-	<span>email:<a href="mailto:info@example.com">sup.healthcare(at)com</a></span>
+	<h4>The Company Name #yeshwanth </h4>
+	<span>donka road</span><br>
+	<span>yeswanth</span><br>
+	<span>Freephone: +91 7893240983</span>?<br>
+	<span>email:<a href="218x5a0513@khitguntur.ac.in">sup.healthcare(at)com</a></span>
 	</div>
 	</div>
     <div class="clear"></div>
