--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
  		<li><a href="products.html">Products</a></li>
 		<li><a href="projects.html">Projects</a></li>
  		<li><a href="contact.html">Contact</a></li>
+		<li><a href="bot.html">Bot</a></li>
 
  	</ul>      
   	</div>
